alignment fixes to work section

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -231,8 +231,8 @@ p {
 #projects {
     border: 2px solid var(--border-color);
     border-radius: 10px;
-    padding: 12px;
-    margin: 30px 0px 115px 0px;
+    padding: 1rem;
+    margin: 30px 5px 115px 5px;
     width: 100%;
 }
 
@@ -240,7 +240,7 @@ p {
 .work {
     display: inline-flex;
     flex-wrap: wrap;
-    margin: 30px -5px 115px -5px;
+    margin: 30px 0px 115px 0px;
     justify-content: space-evenly;
     width: 100%;
 }
@@ -264,6 +264,7 @@ p {
     flex-wrap: wrap;
     justify-content: space-evenly;
     width: 100%;
+    margin: 30px 0px 20px 0px;
 }
 
 #mainProjectLinks {
